<?xml version="1.0"?>
<package format="2">
  <name>esr_driver</name>
  <version>0.0.1</version>
  <description>Delphi ESR driver.</description>
  <maintainer email="jimmy@yen.me.uk">Jimmy Yen</maintainer>
  <license>BSD</license>
  <author email="ivor@iwanders.net">Ivor Wanders</author>
  <author email="jimmy@yen.me.uk">Jimmy Yen</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>socketcan_interface</depend>
  <depend>message_runtime</depend>
  <depend>esr_msgs</depend>
</package>
